2010-12-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14402: XSS in Install tool (thanks to Benjamin Mack)
	* Fixed bug #16590: t3lib_TSparser::checkIncludeLines() does not check files to be included (thanks to Fabrizio Branca)

2010-12-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #16604: Changes in workspace are not shown automatically in pagetree
	* Fixed bug #15495: Pagetree fails to reload

2010-11-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #16501: DBAL does not support multi-column indexes in create table queries

2010-11-30  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16614: common.js resets TYPO3 namespace (Thanks to Peter Kühn)

2010-11-26  Francois Suter  <francois@typo3.org>

	* Fixed bug #16573: Register count_MENUOBJ is not properly initialized

2010-11-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16321: [scheduler] Numeric zero for representation of weekday sunday is not accepted (Thanks to Marcus Krause)
	* Fixed bug #16582: [Caching framework] Remove misleading memcached configuration example from config_default
	* Fixed bug #16317: [scheduler] Valid values generated from cron command does not contain integers only (Thanks to Marcus Krause)

2010-11-25  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16319: [scheduler] CronCmd class variable "values" does not contain integers only (Thanks to Marcus Krause)

2010-11-25  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16322: Incorrect regexp in substituteMarkerArray

2010-11-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16124: htmlArea RTE: Links are incorrectly updated in Google Chrome

2010-11-23  Steffen Ritter  <typo3@steffen-ritter.net>

	* Fixed bug #16517: t3lib_beFunc::getRecordWSOL() does not use it's param $useDeleteClause in else branch

2010-11-12  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15456: Changes made by ColorPicker Wizard are not saved (Thanks to Tobias Hoevelborn)

2010-11-11  Stanislas Rolland  <typo3@sjbr.ca>
